[tool.poetry]
name = "wom.py"
version = "1.0.1"
description = "An asynchronous wrapper for the Wise Old Man API."
authors = ["Jonxslays"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Jonxslays/wom.py"
repository = "https://github.com/Jonxslays/wom.py"
documentation = "https://jonxslays.github.io/wom.py"
packages = [{ include = "wom" }, { include = "wom/py.typed" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.scripts]
wom = "wom.__main__:_main"

[tool.poetry.dependencies]
python = ">=3.8"
aiohttp = ">3.8.1"
msgspec = ">=0.18.5"

[tool.poetry.group.dev.dependencies]
black = "==23.12.1"
coverage = "==7.4.0"
flake8 = { version = "==7.0.0", python = ">=3.8.1" }
griffe = "==0.47.0"
isort = "==5.13.2"
len8 = { version = "==0.7.3.post0", python = "<3.12" }
mike = "==2.0.0"
mkdocs-include-markdown-plugin = { version = "==6.0.4", python = "<3.12" }
mkdocs-material = "==9.5.3"
mkdocstrings = { version = "==0.24.0", extras = ["python"] }
mypy = "==1.8.0"
nox = "==2023.4.22"
pyright = "==1.1.344"
pytest = "==7.4.4"
pytest-asyncio = "==0.23.3"
pytest-testdox = "==3.1.0"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
force_single_line = true

[tool.len8]
include = ["noxfile.py", "tests", "wom"]
code-length = 99
docs-length = 80
strict = true

[tool.mypy]
packages = ["wom"]
strict = true

[tool.pyright]
include = ["wom"]
typeCheckingMode = "strict"
reportImportCycles = false

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
ignore = ["F405", "F403"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
