[tool.poetry]
name = "wom.py"
version = "2.0.0"
description = "An asynchronous wrapper for the Wise Old Man API."
authors = ["Jonxslays"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Jonxslays/wom.py"
repository = "https://github.com/Jonxslays/wom.py"
documentation = "https://jonxslays.github.io/wom.py"
packages = [{ include = "wom" }, { include = "wom/py.typed" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.scripts]
wom = "wom.__main__:_main"

[tool.poetry.dependencies]
python = ">=3.9"
aiohttp = ">3.8.1"
msgspec = ">=0.19.0"

[tool.poetry.group.dev.dependencies]
black = "==25.1.0"
coverage = "==7.6.10"
flake8 = "==7.1.1"
griffe = "==0.47.0"
isort = "==6.0.0"
mike = "==2.0.0"
mkdocs-include-markdown-plugin = "==6.2.2"
mkdocs-material = "==9.5.50"
mkdocstrings = { version = "==0.27.0", extras = ["python"] }
mypy = "==1.14.1"
nox = "==2024.10.9 "
pyright = "==1.1.393"
pytest = "==8.3.4"
pytest-asyncio = "==0.25.3"
pytest-testdox = "==3.1.0"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
force_single_line = true

[tool.mypy]
packages = ["wom"]
strict = true

[tool.pyright]
include = ["wom"]
typeCheckingMode = "strict"
reportImportCycles = false

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
ignore = ["F405", "F403"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
